--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 189px 0 174px;
+    padding: 198px 0 190px 0;
 }
 
 .container {
@@ -100,7 +100,7 @@
 }
 
 .first-package {
-    background-color: #FAFAFA;
+    background-color: #fafafa;
     height: 123px;
     width: 135px;
     display: flex;
@@ -114,7 +114,7 @@
 }
 
 .second-package {
-    background-color: #FFEEEE;
+    background-color: #fafafa;
     height: 123px;
     width: 135px;
     display: flex;
@@ -129,7 +129,7 @@
 }
 
 .threed-package {
-    background-color: #FAFAFA;
+    background-color: #fafafa;
     height: 123px;
     width: 135px;
     display: flex;
@@ -143,7 +143,7 @@
 }
 
 .fourth-package {
-    background-color: #FAFAFA;
+    background-color: #fafafa;
     height: 123px;
     width: 135px;
     display: flex;
@@ -157,7 +157,7 @@
 }
 
 .five-package {
-    background-color: #FAFAFA;
+    background-color: #fafafa;
     height: 123px;
     width: 135px;
     display: flex;
@@ -170,12 +170,98 @@
     color: #707070;
 }
 
+.Other-amount {
+    max-width: 1150px;
+    display: flex;
+    margin: auto;
+
+}
+
 .choose-price {
     width: 192px;
     height: 28px;
-    display: flex;
+    margin: auto;
 }
 
 .choose-price input {
+    color: #b3b3b3;
+    font-size: 18px;
+    font-weight: 400;
+    border: 0;
+    padding-bottom: 10px;
+}
+
+.horizontal-line {
+    width: 762px;
+    height: 1px;
+    background-color: rgb(175, 175, 175);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 10px auto 30px auto;
+
+}
+
+.donate-now {
+    max-width: 1150px;
+    display: flex;
     margin: auto;
+}
+
+.donate-now a {
+    display: block;
+    margin: auto;
+    width: 200px;
+    height: 50px;
+    font-size: 20px;
+    color: #ffffff;
+    text-decoration: none;
+    text-align: center;
+    font-weight: 700;
+    background-color: #FF5959;
+    line-height: 50px;
+}
+
+/* content stop*/
+
+
+
+
+/*start footer*/
+footer {
+    background-color: #0b0d17;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 180px;
+    width: 100%;
+}
+
+.footer-content {
+    max-width: 1150px;
+    margin: auto;
+    display: flex;
+}
+
+.be-humble {
+    width: 178px;
+    height: 92;
+    height: 92px;
+    margin: auto;
+    text-align: center;
+}
+
+.be-humble h3 {
+    padding-top: 50px;
+    color: #ff5959;
+    font-size: 36px;
+    font-weight: 700;
+
+}
+
+.be-humble p {
+    color: #fafafa;
+    padding-top: 50px;
+    font-size: 16px;
+    font-weight: 400;
 }
