--- a/style.css
+++ b/style.css
@@ -308,7 +308,7 @@
     font-size: 16px;
     font-weight: 400;
     padding-top: 20px;
-    padding-bottom: 10px;
+    padding-bottom: 40px;
 }
 
 .depend a {
@@ -329,6 +329,86 @@
     height: 477px;
     margin-top: -60px;
 }
+
+/*end relif*/
+
+/*start servive*/
+.they-need {
+    max-width: 1150px;
+    display: flex;
+    margin: auto;
+    padding-top: 140px;
+    justify-content: flex-start;
+}
+
+.need-survive {
+    margin-top: -50px;
+}
+
+.survive {
+    width: 482px;
+    height: 374px;
+    margin-left: 50px;
+}
+
+.survive h1 {
+    width: 312px;
+    font-weight: 700;
+    font-size: 45px;
+    color: #0b0d17;
+    padding-bottom: 20px;
+}
+
+.survive p {
+    color: #808080;
+    width: 482px;
+    font-size: 16px;
+    font-weight: 400;
+    padding-bottom: 40px;
+}
+
+.survive a {
+    display: block;
+    width: 200px;
+    height: 50px;
+    font-size: 20px;
+    color: #ffffff;
+    text-decoration: none;
+    text-align: center;
+    font-weight: 700;
+    background-color: #FF5959;
+    line-height: 50px;
+}
+
+/*end service*/
+
+/*start get my updates*/
+.get-my {
+    max-width: 1150px;
+    background-color: #ffffff;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    margin: auto;
+}
+
+.updates {
+    width: 586px;
+    margin: auto;
+    text-align: center;
+    padding-top: 140px;
+    padding-bottom: 40px;
+}
+
+.updates h1 {
+    color: #121212;
+    font-weight: 700;
+    font-size: 45px;
+    padding-bottom: 20px;
+}
+
+/*end get my updates*/
 
 /*start payment form*/
 form {
