--- a/style.css
+++ b/style.css
@@ -222,7 +222,8 @@
     line-height: 50px;
 }
 
-/* end donate now*/
+/* end donate today*/
+
 /*start our donate plan*/
 .our-donation {
     background-color: #ffffff;
@@ -341,7 +342,7 @@
     margin-top: -100px;
 }
 
-/*end relif*/
+/*end relif-doods*/
 
 /*start servive*/
 .they {
@@ -427,7 +428,7 @@
 
 /*end get my updates*/
 
-/*start payment form*/
+/*start subcribe form*/
 .subcribe {
     background-color: #ffffff;
     background-position: center;
@@ -465,6 +466,8 @@
     background-color: #FF5959;
     line-height: 50px;
 }
+
+/*end subcribe form*/
 
 /*start footer*/
 footer {
@@ -504,3 +507,5 @@ footer {
     font-size: 16px;
     font-weight: 400;
 }
+
+/*end footer*/
